--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "firebase": "^10.12.5",
     "firebaseui": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-google-button": "^0.8.0",
+    "react-router-dom": "^6.26.0",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
